# esp32-beginner-examples

./: README.md
2.1/hello_led/: hello_led.ino
2.2/fading_led/: fading_led.ino
3.1/beep/: beep.ino
3.2/custom_tone/: custom_tone.ino
rust/: README.md
rust/led_blink/: Cargo.toml  README.md
rust/led_blink/.cargo/: config.toml
rust/led_blink/src/: main.rs
wi-fi/: wi-fi.ino
